--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -5,6 +5,7 @@
 @import "~font-awesome/css/font-awesome.css";
 @import "~react-big-calendar/lib/css/react-big-calendar.css";
 @import "~react-big-calendar/lib/addons/dragAndDrop/styles.css";
+@import "~react-datetime/css/react-datetime.css";
 
 @font-face {
   font-family: "Material Icons";
